unpackaged/main/default/objects/API_Log__c/fields/API_Request__c.field-meta.xml
<CustomField>
    <fullName>API_Request__c</fullName>
    <label>API Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>