unpackaged/main/default/objects/API_Log__c/fields/Claim_Status_API__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_API__c</fullName>
    <label>Claim Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>