unpackaged/main/default/objects/API_Log__c/fields/Data_Staging_ID_API__c.field-meta.xml
<CustomField>
    <fullName>Data_Staging_ID_API__c</fullName>
    <description>prudentInDataStagingId</description>
    <externalId>true</externalId>
    <label>Data Staging ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>