unpackaged/main/default/objects/API_Log__c/fields/Date_of_Service_API__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service_API__c</fullName>
    <inlineHelpText>Claim Fill Date</inlineHelpText>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>