unpackaged/main/default/objects/API_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status_API__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Data_Staging_ID_API__c</columns>
    <columns>Date_of_Service_API__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>