unpackaged/main/default/objects/API_Log__c/listViews/Todays_API_Log.listView-meta.xml
<ListView>
    <fullName>Todays_API_Log</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays API Log</label>
</ListView>